Fix Safari image distortion and spacig for mobile views

--- a/css/projectsection.css
+++ b/css/projectsection.css
@@ -263,7 +263,8 @@
     }
 
     .flex-categories > img {
-        width: auto;
+        width: 100%;
         align-items: flex-start;
+        height: auto;
     }
   }
